--- a/backend/package.json
+++ b/backend/package.json
@@ -7,10 +7,12 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "co": "^4.6.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "jsonwebtoken": "^9.0.0",
     "morgan": "~1.9.1",
     "mysql2": "^3.2.0"
   }
