--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.1",
     "jsonwebtoken": "^9.0.0",
     "morgan": "~1.9.1",
+    "mysql": "^2.18.1",
     "mysql2": "^3.2.0"
   }
 }
